--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,8 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql
+  database: iuvenes
+  username: iuvenes
+  password: LAdGeT5zsvx5KBV4
+  host: 127.0.0.1
