--- a/config/database.yml
+++ b/config/database.yml
@@ -22,5 +22,5 @@ production:
   adapter: mysql
   database: iuvenes
   username: iuvenes
-  password: LAdGeT5zsvx5KBV4
+  password: <%= begin IO.read("/home/otruffer/rails/iuvenes_prod/.db") rescue "" end %>
   host: 127.0.0.1
